# SmartSerial

./: .gitmodules  CMakeLists.txt  README.md  SmartSerial.cpp  SmartSerial.h
.github/workflows/: build.yml  macos.yml  ubuntu.yml  windows.yml
example/: smartserial_example.cpp
